--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div>
-
+        <img src="img/aesthetic-anime-profile-pictures-act70lmrgm5gxgbk.jpg" alt="Foto de perfil" srcset="">
 
 
 
