--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 </head>
 <body>
     <div>
-        <img src="img/avatar-de-perfil.png" alt="Foto de perfil" srcset="">
-
+        <div id="perfil">
+            <img src="img/avatar-de-perfil.png" alt="Foto de perfil">
+        </div>
+        <p id="name">Eu sou Nicolas_</p>
 
 
 
